# txgate

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_GAP_ANALYSIS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  README.md  SECURITY.md  SELLO_BINARY_TEST_SUMMARY.md  TASKS.md  TEST_COVERAGE_SUMMARY.md  TXGATE_BINARY_TEST_SUMMARY.md  config.example.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: crypto_bench.rs  e2e_bench.rs  parsing_bench.rs  policy_bench.rs
contrib/claude-skill/: SKILL.md
contrib/claude-skill/references/: cli-reference.md  config-reference.md
crates/sello/: Cargo.toml  README.md
crates/sello-chain/: Cargo.toml  README.md
crates/sello-chain/src/: additional_tests.rs  bitcoin.rs  chain.rs  erc20.rs  ethereum.rs  lib.rs  registry.rs  rlp.rs  solana.rs  tokens.rs
crates/sello-core/: Cargo.toml  README.md
crates/sello-core/src/: config.rs  config_loader.rs  error.rs  lib.rs  signing.rs  types.rs
crates/sello-crypto/: Cargo.toml  README.md  TEST_COVERAGE_REPORT.md
crates/sello-crypto/src/: encryption.rs  keypair.rs  keys.rs  lib.rs  signer.rs  store.rs
crates/sello-crypto/tests/: comprehensive_coverage.rs
crates/sello-policy/: Cargo.toml  README.md
crates/sello-policy/src/: config.rs  engine.rs  history.rs  lib.rs
crates/sello/src/: audit.rs  lib.rs  logging.rs  logging_integration_tests.rs  main.rs
crates/sello/src/cli/: args.rs  mod.rs
crates/sello/src/cli/commands/: config.rs  exit_codes.rs  init.rs  mod.rs  serve.rs  status.rs
crates/sello/src/cli/commands/bitcoin/: address.rs  mod.rs  sign.rs
crates/sello/src/cli/commands/ethereum/: address.rs  mod.rs  sign.rs
crates/sello/src/cli/commands/key/: delete.rs  export.rs  import.rs  list.rs  mod.rs
crates/sello/src/cli/commands/solana/: address.rs  mod.rs  sign.rs
crates/sello/src/server/: mod.rs  protocol.rs  socket.rs
crates/sello/tests/: integration.rs
crates/sello/tests/common/: mod.rs
crates/sello/tests/e2e/: mod.rs  persistence_test.rs  policy_test.rs  server_test.rs  sign_flow_test.rs  test_utils.rs
crates/sello/tests/unit/: cli_integration_test.rs  error_handling_test.rs  mod.rs
crates/txgate/: Cargo.toml  README.md
crates/txgate-chain/: Cargo.toml  README.md
crates/txgate-chain/src/: additional_tests.rs  bitcoin.rs  chain.rs  erc20.rs  ethereum.rs  lib.rs  registry.rs  rlp.rs  solana.rs  tokens.rs
crates/txgate-core/: Cargo.toml  README.md
crates/txgate-core/src/: config.rs  config_loader.rs  error.rs  lib.rs  signing.rs  types.rs
crates/txgate-crypto/: Cargo.toml  README.md  TEST_COVERAGE_REPORT.md
crates/txgate-crypto/src/: encryption.rs  keypair.rs  keys.rs  lib.rs  signer.rs  store.rs
crates/txgate-crypto/tests/: comprehensive_coverage.rs
crates/txgate-policy/: Cargo.toml  README.md
crates/txgate-policy/src/: config.rs  engine.rs  history.rs  lib.rs
crates/txgate/src/: audit.rs  lib.rs  logging.rs  main.rs
crates/txgate/src/cli/: args.rs  mod.rs  passphrase.rs
crates/txgate/src/cli/commands/: config.rs  init.rs  install_skill.rs  mod.rs  serve.rs  status.rs
crates/txgate/src/cli/commands/bitcoin/: address.rs  mod.rs  sign.rs
crates/txgate/src/cli/commands/ethereum/: address.rs  mod.rs  sign.rs
crates/txgate/src/cli/commands/key/: delete.rs  export.rs  import.rs  list.rs  mod.rs
crates/txgate/src/cli/commands/solana/: address.rs  mod.rs  sign.rs
crates/txgate/src/server/: mod.rs  protocol.rs  socket.rs
crates/txgate/tests/: integration.rs
crates/txgate/tests/common/: mod.rs
crates/txgate/tests/e2e/: mod.rs  persistence_test.rs  policy_test.rs  server_test.rs  sign_flow_test.rs  test_utils.rs
crates/txgate/tests/unit/: cli_integration_test.rs  error_handling_test.rs  mod.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FUZZING.md  QUICKSTART.md  SECURITY_AUDIT.md  TESTING.md  USER_GUIDE.md  sello-paper.md  txgate-paper.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ethereum_parser.rs  policy_rules.rs
scripts/: release.sh
src/: lib.rs
tests/fixtures/ethereum/: eip1559_transfer.json  erc20_transfer.json  legacy_transfer.json
