[workspace]
resolver = "2"
members = [
    "crates/sello-core",
    "crates/sello-crypto",
    "crates/sello-chain",
    "crates/sello-policy",
    "crates/sello",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Sello Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sello-project/sello"
homepage = "https://github.com/sello-project/sello"
description = "Multi-chain transaction signing and policy engine"
keywords = ["blockchain", "signing", "crypto", "policy"]
categories = ["cryptography", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups at lower priority so individual lints can override them
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Strict rules from CLAUDE.md - prevent common security and reliability issues
unwrap_used = "deny"
panic = "deny"
indexing_slicing = "deny"
expect_used = "warn"
todo = "warn"

# Workspace dependencies - shared across crates
[workspace.dependencies]
# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
subtle = "2.6"
sha3 = "0.10"

# Ethereum/EVM parsing
alloy-consensus = "1.4"
alloy-primitives = { version = "1.5", features = ["serde"] }
alloy-rlp = "0.3"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
lru = "0.12"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server
axum = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Encoding
hex = "0.4"

# Filesystem utilities
dirs = "6.0"

# Dev dependencies
tempfile = "3.14"
mockall = "0.13"
proptest = "1.5"
