[workspace]
resolver = "2"
members = [
    "crates/txgate-core",
    "crates/txgate-crypto",
    "crates/txgate-chain",
    "crates/txgate-policy",
    "crates/txgate",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
authors = ["TxGate Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/luisjpf/txgate"
homepage = "https://github.com/luisjpf/txgate"
description = "Multi-chain transaction signing and policy engine"
keywords = ["blockchain", "signing", "crypto", "policy", "txgate"]
categories = ["cryptography", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Lint groups at lower priority so individual lints can override them
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Strict rules from CLAUDE.md - prevent common security and reliability issues
unwrap_used = "deny"
panic = "deny"
indexing_slicing = "deny"
expect_used = "warn"
todo = "warn"

# Workspace dependencies - shared across crates
[workspace.dependencies]
# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"
subtle = "2.6"
sha3 = "0.10"

# Ethereum/EVM parsing
alloy-consensus = "1.4"
alloy-primitives = { version = "1.5", features = ["serde"] }
alloy-rlp = "0.3"

# Bitcoin parsing
bitcoin = { version = "0.32", features = ["serde"] }

# Solana parsing
solana-sdk = "2.2"
bincode = "1.3"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server
axum = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Encoding
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"

# Hashing (for audit logging)
hmac = "0.12"
sha2 = "0.10"

# Compression
flate2 = "1.0"

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Filesystem utilities
dirs = "6.0"

# Terminal utilities
rpassword = "7.3"

# Dev dependencies
tempfile = "3.14"
mockall = "0.13"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates (for integration tests)
txgate-core = { path = "crates/txgate-core" }
txgate-crypto = { path = "crates/txgate-crypto" }
txgate-chain = { path = "crates/txgate-chain" }
txgate-policy = { path = "crates/txgate-policy" }

# ============================================================================
# Workspace package for benchmarks
# ============================================================================
# This is a virtual manifest with a package section to support benchmarks
# in the workspace root.

[package]
name = "txgate-bench"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
criterion = { workspace = true }
txgate-crypto = { workspace = true }
txgate-chain = { workspace = true, features = ["mock"] }
txgate-policy = { workspace = true }
txgate-core = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
hex = { workspace = true }

# ============================================================================
# Benchmarks
# ============================================================================

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "parsing_bench"
harness = false

[[bench]]
name = "policy_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false
