[package]
name = "txgate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
txgate-chain = { path = "../crates/txgate-chain" }
txgate-policy = { path = "../crates/txgate-policy" }
txgate-core = { path = "../crates/txgate-core" }
arbitrary = { version = "1", features = ["derive"] }

# Re-export alloy types for fuzzing Ethereum transactions
alloy-primitives = "1.5"
alloy-consensus = "1.4"
alloy-rlp = "0.3"

[[bin]]
name = "ethereum_parser"
path = "fuzz_targets/ethereum_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy_rules"
path = "fuzz_targets/policy_rules.rs"
test = false
doc = false
bench = false

# Exclude from parent workspace (required for cargo-fuzz)
[workspace]
