[package]
name = "sello-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-chain transaction parsing and construction for Sello"
keywords = ["sello", "blockchain", "transaction", "parser"]
categories = ["cryptography", "parser-implementations"]

[lints]
workspace = true

[dependencies]
sello-core = { path = "../sello-core" }
sello-crypto = { path = "../sello-crypto" }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
mock = []  # Enable MockChain for use in other crates' tests

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
