[package]
name = "sello-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic operations for Sello - key management, signing, and verification"
keywords = ["sello", "crypto", "signing", "keys"]
categories = ["cryptography"]
# Internal crate - not published to crates.io
# Only the main `sello` binary is published
publish = false

[lints]
workspace = true

[dependencies]
sello-core = { path = "../sello-core" }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
subtle = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
