[package]
name = "sello-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Policy engine for transaction approval rules in Sello"
keywords = ["sello", "policy", "rules", "authorization"]
categories = ["cryptography", "config"]
# Internal crate - not published to crates.io
# Only the main `sello` binary is published
publish = false

[lints]
workspace = true

[dependencies]
sello-core = { path = "../sello-core" }
sello-chain = { path = "../sello-chain" }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
lru = { workspace = true }
serde = { workspace = true }
alloy-primitives = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
