[package]
name = "sello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-chain transaction signing service with policy engine"
keywords = ["sello", "signing", "blockchain", "cli", "server"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sello"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
sello-core = { version = "0.1.0", path = "../sello-core" }
sello-crypto = { version = "0.1.0", path = "../sello-crypto" }
sello-chain = { version = "0.1.0", path = "../sello-chain" }
sello-policy = { version = "0.1.0", path = "../sello-policy" }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
rpassword = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
# Audit logging dependencies
hmac = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
thiserror = { workspace = true }
