[package]
name = "txgate-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Policy engine for transaction approval rules in TxGate"
keywords = ["txgate", "policy", "rules", "authorization"]
categories = ["cryptography", "config"]
# Note: This is an internal crate with unstable API.
# Published to crates.io only as a dependency of the `txgate` binary.
# Do not depend on this crate directly - use `txgate` instead.

[lints]
workspace = true

[dependencies]
txgate-core = { version = "0.1.0", path = "../txgate-core" }
txgate-chain = { version = "0.1.0", path = "../txgate-chain" }
serde = { workspace = true }
alloy-primitives = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
