[package]
name = "txgate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Multi-chain transaction signing service with policy engine"
keywords = ["txgate", "signing", "blockchain", "cli", "server"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "txgate"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
txgate-core = { version = "0.3.1", path = "../txgate-core" }
txgate-crypto = { version = "0.3.1", path = "../txgate-crypto" }
txgate-chain = { version = "0.3.1", path = "../txgate-chain" }
txgate-policy = { version = "0.3.1", path = "../txgate-policy" }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
rpassword = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
# Audit logging dependencies
hmac = { workspace = true }
sha2 = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
alloy-primitives = { workspace = true }
tempfile = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
thiserror = { workspace = true }
